# ros2

spot/: package.xml  setup.py
spot/config/: control.yaml  controllers.yaml  joy_params.yaml  policy_params.yaml  spot_params.yaml
spot/launch/: controller.launch.py  qr_rviz.launch.py  spot_control.launch.py  spot_gazebo_classic.launch.py  spot_gazebo_sim.launch.py  spot_move.launch.py  view_spot.launch.py
spot/spot/: imu_publisher.py  pwm_publisher.py  spot_pybullet_interface.py  spot_real_interface.py
spot/spot/GaitGenerator/: Bezier.py
spot/spot/Kinematics/: LegKinematics.py  SpotKinematics.py
spot/spot_gymenv/: spot(m).py  spot.py  spot_gym_env.py
spot/spot_gymenv/GymEnvs/: spot_bezier_env.py
spot/spot_gymenv/util/pybullet_data/assets/urdf/: spot(micro).urdf  spot(test).urdf  spot.urdf  spot_mini_mini.urdf  spot_new_m.urdf
spot/spot_gymenv/util/pybullet_data/assets/urdf/stl(z180)/: backpart.stl  foot.stl  (+15 more)
spot/spot_rl/models/contact/: spot_ars_109_policy  spot_ars_119_policy  spot_ars_129_policy  spot_ars_139_policy  spot_ars_149_policy  spot_ars_159_policy  spot_ars_169_policy  spot_ars_179_policy  spot_ars_189_policy  spot_ars_199_policy  spot_ars_19_policy  spot_ars_209_policy  spot_ars_219_policy  spot_ars_229_policy  spot_ars_239_policy  spot_ars_249_policy  spot_ars_259_policy  spot_ars_269_policy  spot_ars_279_policy  spot_ars_289_policy  spot_ars_299_policy  spot_ars_29_policy  spot_ars_309_policy  spot_ars_319_policy  spot_ars_329_policy  spot_ars_339_policy  spot_ars_349_policy  spot_ars_359_policy  spot_ars_369_policy  spot_ars_379_policy  spot_ars_389_policy  spot_ars_399_policy  spot_ars_39_policy  spot_ars_409_policy  spot_ars_419_policy  spot_ars_429_policy  spot_ars_439_policy  spot_ars_449_policy  spot_ars_459_policy  spot_ars_469_policy  (+40 more)
spot/spot_rl/models/no_contact/: spot_ars_59_policy  spot_ars_69_policy
spot/spot_rl/results/: a.py  spot_ars_rand_seed0.npy
spot/spot_rl/src/: spot_ars.py  spot_ars_eval(micro.py  spot_ars_eval.py
spot/spot_rl/src/ars_lib/: ars(spotmicro).py  ars.py
spot/urdf/: qr.urdf  spot.urdf.xacro  spot.urdf.xacro_old  spot_macro.xacro  transmissions.xacro
spot_cpp/: CMakeLists.txt  package.xml
spot_cpp/include/spot_cpp/: spot.hpp  teleop.hpp
spot_cpp/src/: spot.cpp  spot_sm.cpp  teleop.cpp  teleop_node.cpp
spot_interfaces/: CMakeLists.txt  package.xml
spot_interfaces/msg/: AgentData.msg  ContactData.msg  IMUdata.msg  JointAngles.msg  JointPulse.msg  JoyButtons.msg  MiniCmd.msg
